--- a/Backend_Util/src/main/resources/application.properties
+++ b/Backend_Util/src/main/resources/application.properties
@@ -4,7 +4,7 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.supported-submit-methods=Array=[]
 
 #MySQL connection
-spring.datasource.url=jdbc:mysql://localhost:3307/keycloak?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3308/spring?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
 
