--- a/Backend_Util/src/main/resources/application.properties
+++ b/Backend_Util/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger
 #Disable Try out button from Swagger UI
-springdoc.swagger-ui.supported-submit-methods=Array=[]
-
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
 #MySQL connection
 spring.datasource.url=jdbc:mysql://localhost:3308/spring?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
