--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -1,18 +1,14 @@
 spring.application.name=demo
-
-
+springdoc.swagger-ui.path=/swagger
 springdoc.api-docs.path=/api-docs
-#Disable Try out button from Swagger UI
-springdoc.swagger-ui.supported-submit-methods=Array=[]
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+
 
 #MySQL connection
-spring.datasource.url=jdbc:mysql://localhost:3308/spring?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3308/bank?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
-
-#spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/social_app?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
