--- a/bank/pom.xml
+++ b/bank/pom.xml
@@ -9,11 +9,11 @@
 		<version>3.0.4</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bezkoder</groupId>
-	<artifactId>spring-boot-swagger-3-example</artifactId>
+	<groupId>com.bank</groupId>
+	<artifactId>spring-boot-bank-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-swagger-3-example</name>
-	<description>Spring Boot and Swagger 3 example: Rest API Documentation</description>
+	<name>spring-boot-bank-example</name>
+	<description>Spring Boot Simple bank example: Rest API Documentation</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
