--- a/bank/src/main/resources/application.properties
+++ b/bank/src/main/resources/application.properties
@@ -21,3 +21,20 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 management.endpoints.web.exposure.include=*
+
+logging.file.name=logs/app.log
+#The filename pattern used to create log archives.
+logging.logback.rollingpolicy.file-name-pattern=logs/%d{yyyy-MM, aux}/app.%d{yyyy-MM-dd}.%i.log
+
+#The maximum size of log file before it is archived.
+logging.logback.rollingpolicy.max-file-size=100MB
+
+#The maximum amount of size log archives can take before being deleted.
+logging.logback.rollingpolicy.total-size-cap=1GB
+
+#The maximum number of archive log files to keep (defaults to 7).
+logging.logback.rollingpolicy.max-history=10
+ 
+spring.messages.basename=i18n/messages
+spring.messages.fallback-to-system-locale=false
+spring.messages.encoding=UTF-8
