--- a/bank/src/test/resources/application-test.properties
+++ b/bank/src/test/resources/application-test.properties
@@ -1,11 +1,18 @@
-# Specifies the JDBC URL for the in-memory H2 database.
-# "mem:testdb" creates a temporary database that exists only during the test runtime.
-spring.datasource.url=jdbc:h2:mem:testdb
+# H2 In-Memory Database (MySQL compatibility mode)
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-# Automatically creates the schema when the application starts
-# and drops it when the application context is closed (suitable for testing).
+# Hibernate (DDL and dialect)
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Sets the Hibernate dialect specifically for H2.
-# This tells Hibernate how to translate SQL queries for the H2 database.
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Optional: show SQL
+spring.jpa.show-sql=true
+
+# H2 Console (optional)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
