--- a/Demo/src/main/resources/application.properties
+++ b/Demo/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=demo
-
-
+springdoc.swagger-ui.path=/swagger
 springdoc.api-docs.path=/api-docs
-#Disable Try out button from Swagger UI
-springdoc.swagger-ui.supported-submit-methods=Array=[]
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
 
 #MySQL connection
 spring.datasource.url=jdbc:mysql://localhost:3308/spring?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
