--- a/Bank/src/main/resources/application.properties
+++ b/Bank/src/main/resources/application.properties
@@ -16,9 +16,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Format SQL (optional, makes it more readable)
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 management.endpoints.web.exposure.include=*
 
@@ -35,3 +35,4 @@ logging.logback.rollingpolicy.total-size-cap=1GB
 #The maximum number of archive log files to keep (defaults to 7).
 logging.logback.rollingpolicy.max-history=10
 
+logging.level.root=INFO
