--- a/Demo/src/main/resources/application.properties
+++ b/Demo/src/main/resources/application.properties
@@ -4,21 +4,4 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.tryItOutEnabled=true
 springdoc.swagger-ui.filter=true
 
-#MySQL connection
-spring.datasource.url=jdbc:mysql://localhost:3308/spring?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=1234
-
-#spring.datasource.url=jdbc:mysql://${DB_HOSTNAME}:${DB_PORT}/social_app?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# Format SQL (optional, makes it more readable)
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.root=ERROR
