--- a/Bank/src/test/resources/application-test.properties
+++ b/Bank/src/test/resources/application-test.properties
@@ -5,7 +5,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # Hibernate (DDL and dialect)
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
