--- a/Bank/src/main/resources/application.properties
+++ b/Bank/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=1234
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Format SQL (optional, makes it more readable)
