--- a/Bank/src/test/resources/application-test.properties
+++ b/Bank/src/test/resources/application-test.properties
@@ -6,9 +6,9 @@ spring.datasource.password=
 
 # Hibernate (DDL and dialect)
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 # Optional: show SQL
 spring.jpa.show-sql=true
