--- a/Bank/pom.xml
+++ b/Bank/pom.xml
@@ -24,6 +24,14 @@
 			<artifactId>App_util</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		        <dependency>
+            <groupId>com.mkyong.password</groupId>
+            <artifactId>password</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
