--- a/Backend_Util/pom.xml
+++ b/Backend_Util/pom.xml
@@ -2,14 +2,14 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.4</version>
+		<groupId>sampleDemo</groupId>
+		<artifactId>sampleDemo</artifactId>
+		<version>0.0.1</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
-
+	<name>App Util</name>
 	<groupId>com.demo</groupId>
 	<artifactId>App_util</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
